* Replaced ${version} to ${project.version} in all pom files (thanks to pvdissel for the patch) (issue 287).
* Added work-around to stub some final system classes (such as java.util.UUID) (issue 354).
* Improved the PowerMock Java agent support. It should now work together with multiple java agents (thanks to Magnus Jungsbluth for the patch) (issue 357).
* Upgraded TestNG module to 6.3.1.

Change log 1.4.10 (2011-08-23)
------------------------------
* Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
* Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333).
* Upgraded to Javassist 3.15 GA (issue 338).
* Upgraded TestNG module to TestNG 6.2.
* Mockito @InjectMocks annotations on superclasses of test class are no longer ignored (issue 343).
* MockClassloader now defers the loading of classes in "org.pitest.*" to the system classloader. This means that you should be able to use PIT (http://pitest.org) without adding @PowerMockIgnore("org.pitest.*") to each test class (issue 337).
* PowerMockito now works with Mockito 1.9-rc1 but will not include the new artifact by default because it's still rc (issue 339).
* Removed PowerMockRule from full jar in release process (issue 325).

Change log 1.4.9 (2011-05-02)
-----------------------------
* Fixed an issue when mocking system classes containing fields of type Class, Classloader or synthetic fields such as java.util.ServiceLoader.
* TestNG PowerMockObjectFactory now sets the thread context classloader to the PowerMock mock classloader (issue 315).