@@ -55,7 +55,7 @@ public class FinalDemoWithAnnotationInjectionTest {
 			tested.say("world");
 			fail("Should throw AssertionError!");
 		} catch (AssertionError e) {
-			assertEquals("\n  Unexpected method call say(\"world\"):", e.getMessage());
+			assertEquals("\n  Unexpected method call FinalDemo.say(\"world\"):", e.getMessage());
 		}
 	}
 
@@ -75,7 +75,7 @@ public class FinalDemoWithAnnotationInjectionTest {
 			tested.sayFinalNative("world");
 			fail("Should throw AssertionError!");
 		} catch (AssertionError e) {
-			assertEquals("\n  Unexpected method call sayFinalNative(\"world\"):", e.getMessage());
+			assertEquals("\n  Unexpected method call FinalDemo.sayFinalNative(\"world\"):", e.getMessage());
 		}
 	}
 }
